--- a/app.css
+++ b/app.css
@@ -3,28 +3,26 @@ body {
 	letter-spacing: 0px;
 }
 
-body.llama {
-	background: url("llama.jpg") no-repeat center center fixed; 
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;	
-}
-
 #header {
-/*#header, #header * {*/
-	/*opacity: 1 !important;*/
 	border-left: 10px solid grey;
-	padding-left: 20px;
+	padding-left: 10px;
 }
 
 #container {
 	max-width: 950px;
 	margin: 0 auto;
-	margin-top: 120px;
+	margin-top: 70px;
 }
 
-#header .title, .title input {
+#header .title {
+	font-family: Roboto;
+	font-weight: 600;
+	opacity: 0.5;
+	font-size: 23px;
+	margin-bottom: 0px
+}
+
+.title input {
 	font-family: Roboto;
 	font-weight: 600;
 	opacity: 0.5;
@@ -44,9 +42,42 @@ body.llama {
 }
 
 #header .item.small {
-	font-size: 18px;
+	font-size: 16px;
 	opacity: 0.3;
-	margin-top: 10px;
+	/*margin-top: 10px;*/
+}
+
+.tabs {
+	margin-top: 50px;
+	margin-bottom: 50px;
+}
+
+.tab {
+	float: left;
+	cursor: pointer;
+	background: rgba(0,0,0,0.15);
+	padding: 10px 14px;
+	margin-right: 10px;
+
+	font-family: Roboto;
+	opacity: 0.5;
+	font-size: 20px;
+	margin-bottom: 3px;	
+}
+
+
+.sheet, .tabs {
+	display: block;
+	overflow: auto;
+}
+
+.sheet-title input {
+	font-family: Roboto;
+	font-weight: 600;
+	opacity: 0.5;
+	font-size: 32px;
+	margin-bottom: 50px	
+
 }
 
 .column {
@@ -91,14 +122,6 @@ input:focus{
 
 body {
 	overflow: auto;
-}
-
-#llama-toggle {
-	position: absolute;
-	top: 0px;
-	right: 0px;
-	height: 10px;
-	width: 10px;
 }
 
 @media (max-width: 1050px) {
