--- a/app.css
+++ b/app.css
@@ -4,12 +4,12 @@ body {
 }
 
 #header {
-	border-left: 10px solid grey;
-	padding-left: 10px;
+	/*border-left: 10px solid grey;*/
+	/*padding-left: 10px;*/
 }
 
 #container {
-	max-width: 950px;
+	max-width: 1050px;
 	margin: 0 auto;
 	margin-top: 70px;
 }
@@ -44,12 +44,11 @@ body {
 #header .item.small {
 	font-size: 16px;
 	opacity: 0.3;
-	/*margin-top: 10px;*/
 }
 
 .tabs {
-	margin-top: 50px;
-	margin-bottom: 50px;
+	padding: 20px;
+	padding-left: 0px;
 }
 
 .tab {
@@ -58,13 +57,26 @@ body {
 	background: rgba(0,0,0,0.15);
 	padding: 10px 14px;
 	margin-right: 10px;
-
 	font-family: Roboto;
 	opacity: 0.5;
 	font-size: 20px;
 	margin-bottom: 3px;	
+	box-sizing: border-box;
+	border: 1px solid rgba(0,0,0,0);
 }
 
+.active.tab {
+	/*background: rgba(0,0,0,0.35);*/
+	border: 1px solid black;
+}
+
+
+.sheet {
+	padding: 30px;
+	background: rgba(255,255,255,0.2);
+	/*border: 1px solid rgba(0,0,0,0.1);*/
+	border: 1px dotted black;
+}
 
 .sheet, .tabs {
 	display: block;
@@ -75,9 +87,10 @@ body {
 	font-family: Roboto;
 	font-weight: 600;
 	opacity: 0.5;
-	font-size: 32px;
-	margin-bottom: 50px	
-
+	font-size: 28px;
+	margin-bottom:30px;
+	color: rgba(0,0,0,0.5);
+	box-sizing: border-box;
 }
 
 .column {
@@ -85,13 +98,17 @@ body {
 	float: left;
 }
 
-.column:nth-of-type(1) {
+.column1 {
 	margin-right: 50px;
 }
 
 .list {
 	box-sizing: border-box;
 	margin-bottom: 50px;
+}
+
+.list:last-of-type {
+	margin-bottom: 20px;
 }
 
 #lists {
@@ -127,6 +144,8 @@ body {
 @media (max-width: 1050px) {
     #container {
     	margin-left: 50px;
+    	margin-right: 50px;
+    	margin-bottom: 50px;
     }
 
     .column {
